--- a/POC.IoC/POC.IoC.csproj
+++ b/POC.IoC/POC.IoC.csproj
@@ -1,5 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\POC.Domain\POC.Domain.csproj" />
+    <ProjectReference Include="..\POC.Application\POC.Application.csproj" />
+    <ProjectReference Include="..\POC.Infra\POC.Infra.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
