feat: :heavy_plus_sign: Including Mongo repositories
Including Mongo repositories

--- a/POC.API/POC.API.csproj
+++ b/POC.API/POC.API.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\POC.Ioc\POC.IoC.csproj" />
+    <ProjectReference Include="..\POC.Domain\POC.Domain.csproj" />
   </ItemGroup>
 
 </Project>
