--- a/POC.API/appsettings.json
+++ b/POC.API/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": "mongodb://localhost:27017",
+  "dbName": "POC"
 }
