--- a/POC.IoC/POC.IoC.csproj
+++ b/POC.IoC/POC.IoC.csproj
@@ -6,6 +6,10 @@
     <ProjectReference Include="..\POC.Infra\POC.Infra.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
